dev/test_programs/INVALID/group12/scan_parse_errors/no_package_error.go
// no package declaration

func main() {
	print()
}